# Zero2WTestI2C

./: CMakeLists.txt  README.md  i2c-state.ini
src/: i2c-ini.cpp  i2c-ini.hpp  test-i2c.cpp
